o added meta to avoid error page indexation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@18921 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
+++ b/GSWExtensions.framework/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Missing Page Error</title>
+   <meta name="robots" content="noindex,nofollow"/>
 </head>
 <body bgcolor="white">
 
