--- a/GSWExtensions.framework/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
+++ b/GSWExtensions.framework/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Session Creation Error</title>
+   <meta name="robots" content="noindex,nofollow"/>
 </head>
 <body BGcolor="white">
 
