--- a/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
+++ b/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Missing Session Error</title>
+   <meta name="robots" content="noindex,nofollow"/>
 </head>
 <body bgcolor="white">
 
