--- a/GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.html
+++ b/GSWExtensions.framework/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.html
@@ -1,1 +1,1 @@
-<gsweb name="Anchor"></gsweb><gsweb name="Link"><gsweb name="Image"></gsweb></gsweb> <gsweb name="Label"></gsweb><gsweb name="Condition"><gsweb name="Content"></gsweb></gsweb>
+<gsweb name="Anchor"></gsweb><gsweb name="ShouldDisplay"><gsweb name="Link"><gsweb name="Image"></gsweb></gsweb> <gsweb name="Label"></gsweb><gsweb name="Condition"><gsweb name="Content"></gsweb></gsweb></gsweb>
