fix double text field, update documentation allow compilation with TCSDB
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@25034 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/Main.gswc/Main.html
+++ b/Examples/hello/Main.gswc/Main.html
@@ -6,7 +6,7 @@
 	<GSWEB NAME=MyForm>
 	What's your name?
 	<P>
-	<GSWEB NAME=NAME_FIELD><INPUT TYPE="text"></GSWEB>
+	<GSWEB NAME=NAME_FIELD></GSWEB>
 	<GSWEB NAME=SUBMIT_BUTTON><INPUT TYPE="SUBMIT"></GSWEB>
 	</GSWEB>
 </BODY>
