* fixed memory leak * ported to OS X (beta) * depricated GSW naming
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30215 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/hello/HelloPage.wo/HelloPage.html
+++ b/Examples/hello/HelloPage.wo/HelloPage.html
@@ -3,6 +3,6 @@
 	<TITLE>Hello World!</TITLE>
 </HEAD>
 <BODY>
-	Hello <GSWEB NAME=BODY_NAME_STRING></GSWEB>!
+	Hello <webobject NAME=body_name_string></webobject>!
 </BODY>
 </HTML>
