* GSWeb/GSWResourceManager.m reformat statics, add TheStringsTableLock add _cachedStringsTable() add _cachedStringForKey() rewrote -stringForKey:inTableNamed:withDefaultValue:inFramework:languages: use NONESTR, not @"NONE" * Testing/DynamicElements/ImagePage.h * Testing/DynamicElements/Resources/Chinese.lproj/Localizable.strings * Testing/DynamicElements/Resources/Russian.lproj/Localizable.strings * Testing/DynamicElements/Resources/French.lproj/Localizable.strings * Testing/DynamicElements/Resources/English.lproj/Localizable.strings * Testing/DynamicElements/Resources/German.lproj/Localizable.strings * Testing/DynamicElements/ImagePage.m * Testing/DynamicElements/ImagePage.wo add test for GSWResourceManager's -stringForKey:inTableNamed:withDefaultValue:inFramework:languages: * Testing/DynamicElements/DynamicElements.m set UTF8 encoding * Testing/DynamicElements/GNUmakefile add new files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@30841 72102866-910b-0410-8b05-ffd578937521

--- a/Testing/DynamicElements/ImagePage.wo/ImagePage.html
+++ b/Testing/DynamicElements/ImagePage.wo/ImagePage.html
@@ -6,6 +6,7 @@
 	</head>
   <body>
     <h2>GSWImage Test 1 (Web server resources)</h2>
+    <br/><webobject name="HelloString"></webobject>
     <br/>
     <webobject name="TestImage"></webobject>
     <hr/>
